# RLPack

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  simulator.py
binaries/c_requirements/: install_kineto.sh
binaries/grad_accumulator/: Binding.cpp  CMakeLists.txt  C_GradAccumulator.cpp  C_GradAccumulator.h
binaries/memory/: Binding.cu  CMakeLists.txt  C_Memory.cpp  C_Memory.cu  C_Memory.cuh  C_Memory.h  binding.cpp
binaries/memory/sumtree/: SumTree.cpp  SumTree.h
binaries/memory/sumtree_node/: SumTreeNode.cpp  SumTreeNode.h
binaries/memory/utils/: CudaOffload.cuh  HostOffload.tpp  Utils.h
binaries/replay_buffer/: Binding.cu  CMakeLists.txt  C_ReplayBuffer.cu  C_ReplayBuffer.cuh
binaries/replay_buffer/offload/: CudaOffload.cuh  HostOffload.tpp  Offload.h
binaries/replay_buffer/replay_buffer_data/: C_ReplayBufferData.cpp  C_ReplayBufferData.h
binaries/replay_buffer/sumtree/: SumTree.cpp  SumTree.h
binaries/replay_buffer/sumtree_node/: SumTreeNode.cpp  SumTreeNode.h
binaries/replay_buffer/utils/: CudaOffload.cuh
binaries/rollout_buffer/: Binding.cpp  CMakeLists.txt  C_RolloutBuffer.cpp  C_RolloutBuffer.h
binaries/rollout_buffer/rollout_buffer_batch/: RolloutBufferBatch.cpp  RolloutBufferBatch.h
binaries/rollout_buffer/rollout_buffer_batch_transform/: RolloutBufferBatchTransform.cpp  RolloutBufferBatchTransform.h
binaries/rollout_buffer/rollout_buffer_container/: RolloutBufferContainer.cpp  RolloutBufferContainer.h
binaries/rollout_buffer/rollout_buffer_data/: RolloutBufferData.cpp  RolloutBufferData.h
binaries/stl_bindings/: CMakeLists.txt  StlBindings.cpp  StlBindings.h
binaries/utils/: UtilityMapping.hpp  maps.h
binaries/utils/opaque_containers/: Int64DequeMap.hpp  TensorDequeMap.hpp  TensorMap.hpp  TensorVectorMap.hpp
binaries/utils/ops/: arg_mergesort.cuh
bindings/pybind11_helpers/: BinderBase.cpp  BinderBase.h  dqnBinder.cpp
bindings/pybind11_helpers/Dqn/: GetDqnAgent.cpp  GetDqnAgent.h  GetDqnAgent.tpp  dqnBinder.cpp
bindings/rlpack/: __init__.py  dqn.py
docs/: .nojekyll  _config.yml  doxygen_config.cfg  doxygen_config.txt  doxygen_layout.xlm  get_started.md  index.html  index.md  overview.md
docs/agents/: a2c.md  dqn.md  index.md
docs/agents/actor_critic/: a2c.md  a3c.md  ac.md  index.md
docs/distributions/: index.md
docs/doxygen/: _doxygen.txt
docs/exploration/: index.md
docs/html/: ____init_____8py.html  ___c_2____init_____8py.html  __mlp__feature__extractor_8py.html  _binding_8cpp.html  _binding_8cpp__incl.map  _binding_8cpp__incl.md5  _binding_8cu.html  _binding_8cu__incl.map  _binding_8cu__incl.md5  _c___grad_accumulator_8cpp.html  _c___grad_accumulator_8cpp__incl.map  _c___grad_accumulator_8cpp__incl.md5  _c___grad_accumulator_8h.html  _c___grad_accumulator_8h__dep__incl.map  _c___grad_accumulator_8h__dep__incl.md5  _c___grad_accumulator_8h__incl.map  _c___grad_accumulator_8h__incl.md5  _c___grad_accumulator_8h_source.html  _c___memory_8cu.html  _c___memory_8cu__incl.map  _c___memory_8cu__incl.md5  _c___memory_8cuh.html  _c___memory_8cuh__dep__incl.map  _c___memory_8cuh__dep__incl.md5  _c___memory_8cuh__incl.map  _c___memory_8cuh__incl.md5  _c___replay_buffer_8cu.html  _c___replay_buffer_8cu__incl.map  _c___replay_buffer_8cu__incl.md5  _c___replay_buffer_8cuh.html  _c___replay_buffer_8cuh__dep__incl.map  _c___replay_buffer_8cuh__dep__incl.md5  _c___replay_buffer_8cuh__incl.map  _c___replay_buffer_8cuh__incl.md5  _c___replay_buffer_data_8cpp.html  _c___replay_buffer_data_8cpp__incl.map  _c___replay_buffer_data_8cpp__incl.md5  _c___replay_buffer_data_8h.html  _c___replay_buffer_data_8h__dep__incl.map  _c___replay_buffer_data_8h__dep__incl.md5  (+1013 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  (+103 more)
docs/models/: activations.md  index.md  loss_functions.md  lr_schedulers.md  optimizers.md
dqn/: __init__.py  dqn_agent.py
dqn/models/: __init__.py  dlqn1d.py
environments/: environments.py
environments/configs/: dlqn1d.yaml
rlpack/: __init__.py  simulator.py  simulator_async.py  simulator_distributed.py
rlpack/_C/: __init__.py  grad_accumulator.py  memory.py  replay_buffer.py  rollout_buffer.py
rlpack/actor_critic/: __init__.py  a2c.py  a3c.py  ac.py
rlpack/distributions/: __init__.py  gaussian_mixture.py  gaussian_mixture_log_std.py  multivariate_normal_log_std.py  normal_log_std.py
rlpack/dqn/: __init__.py  dqn.py  dqn_agent.py  dqn_proportional_agent.py  dqn_proportional_prioritization_agent.py  dqn_rank_based_agent.py  dqn_rank_based_prioritization_agent.py  dqn_uniform_agent.py
rlpack/environments/: __init__.py  environments.py
rlpack/exploration/: __init__.py  gaussian_noise.py  gaussian_noise_exploration.py  state_dependent_exploration.py
rlpack/models/: __init__.py  _mlp_feature_extractor.py  actor_critic_mlp_policy.py  mlp.py  mlp_feature_extractor.py
rlpack/trainer/: __init__.py  trainer.py
rlpack/utils/: __init__.py  exceptions.py  internal_code_setup.py  normalization.py  register.py  sanity_check.py  setup.py  typing_hints.py
src/: AgentBase.cpp  AgentBase.h  AgentBase.hpp  AgentImpl.hpp  ModelBase.h
src/Activations/: Activation.hpp
src/Dqn/: Agent.h  Agent.tpp  Dqn.hpp  DqnBase.hpp  DqnImpl.hpp
src/LrSchedulers/: LrScheduler.hpp  LrSchedulerBase.h
src/Optimizers/: Optimizer.hpp  OptimizerBase.h
src/c_requirements/: install_libtorch.sh  install_pybind11.sh
src/memory/: CMakeLists.txt  C_Memory.cpp  C_Memory.h  binding.cpp
src/utils/: utils.hpp
tests/: config.yaml  gym_simulator.py
tests/configs/: dcqn1d.yaml  dlqn1d.yaml
tests/environments/: __init__.py  lunar_lander_simulator.py
utils/: memory.py  normalization.py  register.py
utils/Metal/: MetalComputeWrapperImpl.cpp  MetalComputeWrapperImpl.h
utils/base/: __init__.py  agent.py
(+143 files in other folders)
