[metadata]
name = RLPack
description = Implementation of RL Algorithms
long_description = Implementation of RL Algorithms with PyTorch and optimization with C++.
long_description_content_type = text/markdown
author = Kartik Rajeshwaran
author_email = kartik.rajeshwaran@gmail.com
license = MIT
platforms = any
url = https://github.com/kartik2309/RLPack
keywords = reinforcement-learning gym cpp
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages =
    rlpack
    rlpack.dqn
    rlpack.dqn.models
    rlpack.environments
    rlpack.utils
    rlpack.utils.base
    rlpack._C
package_dir =
    rlpack
    rlpack/dqn
    rlpack/dqn/models
    rlpack/environments
    rlpack/utils
    rlpack/utils/base
    rlpack/_C

python_requires = >=3.7
install_requires =
    numpy>=1.20.0
    gym>=0.25.0
    matplotlib>=3.4.0
    PyYAML>=6.0
    pygame>=2.1.0
    pytest >=7.0.0
    box2d-py>=2.3.0
    torch>=1.12.0

[options.packages.find]
where = rlpack

[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s

[options.entry_points]
console_scripts =
RLPack_entry = rlpack.bin.__main__:main

[tool:pytest]
addopts = -rsxX -v
testpaths = Interface

