[metadata]
name = RLPack
description = Implementation of RL Algorithms
long_description = Implementation of RL Algorithms with PyTorch and optimization with C++.
long_description_content_type = text/markdown
author = Kartik Rajeshwaran
author_email = kartik.rajeshwaran@gmail.com
license = MIT
license_file = LICENSE.md
platforms = posix
url = https://github.com/kartik2309/RLPack
keywords = reinforcement-learning pytorch gym cpp python
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
zip_safe = False
packages =
    rlpack
    rlpack.dqn
    rlpack.models
    rlpack.environments
    rlpack.environments.configs
    rlpack.utils
    rlpack.utils.base
    rlpack._C
package_dir =
    rlpack
    rlpack/dqn
    rlpack/models
    rlpack/environments
    rlpack/environments/configs
    rlpack/utils
    rlpack/utils/base
    rlpack/_C
python_requires = >=3.7
install_requires =
    numpy>=1.20.0
    gym>=0.26.0
    matplotlib>=3.4.0
    PyYAML>=6.0
    pygame>=2.1.0
    pytest >=7.0.0
    box2d-py>=2.3.0
    torch>=1.12.0
    pybind11>=2.10.0
scripts = 'rlpack/bin/simulator'

[options.packages.find]
where = rlpack

[options.package_data]
rlpack/environments/configs/ = rlpack/environments/configs/*.yaml

[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s

[options.entry_points]
console_scripts =
RLPack_entry = rlpack.bin.simulator.__main__:main

[tool:pytest]
addopts = -rsxX -v
testpaths = Interface
