[metadata]
name = RLPack
description = Implementation of RL Algorithms
long_description = file: README.md
long_description_content_type = text/markdown
author = Kartik Rajeshwaran
author_email = kartik.rajeshwaran@gmail.com
license = MIT
license_file = LICENSE.md
platforms = posix
url = https://github.com/kartik2309/RLPack
keywords = reinforcement-learning pytorch gym cpp python
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
zip_safe = True
packages =
    rlpack
    rlpack._C
    rlpack.actor_critic
    rlpack.actor_critic.utils
    rlpack.distributions
    rlpack.dqn
    rlpack.dqn.utils
    rlpack.models
    rlpack.models.utils
    rlpack.trainer
    rlpack.utils
    rlpack.utils.base
    rlpack.utils.base.registers
package_dir =
    rlpack
    rlpack/_C
    rlpack/actor_critic
    rlpack/actor_critic/utils
    rlpack/distributions
    rlpack/dqn
    rlpack/dqn/utils
    rlpack/models
    rlpack/models/utils
    rlpack/trainer
    rlpack/utils
    rlpack/utils/base
    rlpack/utils/base/registers
python_requires = >=3.7
install_requires =
    torch==1.13.1
    numpy==1.24.0
    gym==0.26.2
    matplotlib==3.6.2
    PyYAML==6.0
    pygame==2.1.2
    box2d-py==2.3.8
    pybind11==2.10.2
    mujoco==2.3.1
    tensorboard==2.11.0
scripts = 'rlpack/bin/simulator'

[options.packages.find]
where = rlpack

[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s

[options.entry_points]
console_scripts =
RLPack_entry = rlpack.bin.simulator.__main__:main

[tool:pytest]
addopts = -rsxX -v
testpaths = Interface
